# fitnesscoach

./: .gitignore  README.md  blog-post.md  main.py  pyproject.toml
dataset/: .gitignore  README.md  generate_dataset.py  requirements.txt  upload_to_hub.py
finetune/: .gitignore  QUICKSTART.md  README.md  pyproject.toml
finetune/fitnesscoach_finetune/: main.py
fitness_coach/: cli.py  fitness_coach.py
fitnesscoach/: cli.py  coach.py  provider.py
tests/: test_coach.py  test_fitness_data.py
