[project]
name = "fitness_coach"
version = "0.1.0"
description = "Smart fitness coach powered by AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "garminconnect>=0.2.38",
    "keyring>=25.7.0",
    "rich>=14.2.0",
    "typer>=0.21.1",
]
scripts = { fitness-coach = "fitness_coach.cli:app" }

[tool.setuptools.packages.find]
include = ["fitness_coach*"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ipdb>=0.13.13",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "W605"]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2